[package]
name = "nearby"
version = "0.1.5"
authors = ["Flavio <flavio@wisespace.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "Scans all nearby wifi networks and the devices connected to each network"
keywords = ["wireless", "wifi", "dot11", "netjson"]
documentation = "https://github.com/wisespace-io/nearby"
repository = "https://github.com/wisespace-io/nearby"
readme = "README.md"

[dependencies]
clap = "2.33"
pcap = "0.7.0"
radiotap = "1.3"
bytes = "0.4"
byteorder = "1"
console = "0.9"
futures = "0.1"
env_logger = "0.7"
actix = "0.7"
actix-web = "0.7"
ctrlc = "3.1"
crossbeam-channel = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
error-chain = { version = "0.12", default-features = false }